# Key

./: build.gradle  main.py  railway.json  setting.gradle
.github/workflows/: build.yml
App/: CMakeLists.txt
App/Src/main/cpp/: native-lib.cpp
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
